Spotless fix
Signed-off-by: Anders Alfredsson <andersb86@gmail.com>
(cherry picked from commit 6b5266852af6c940878daf9c05f37c95293b637e)